fix: (PasscodeInput) fix inline-block taking extra space

--- a/src/components/passcode-input/passcode-input.less
+++ b/src/components/passcode-input/passcode-input.less
@@ -3,6 +3,7 @@
 .@{class-prefix-passcode-input} {
   position: relative;
   display: inline-flex;
+  vertical-align: top;
   overflow: hidden;
 
   --cell-size: 40px;
